# finance-analysis-agent

./: .gitignore  PRD - Modular Personal Finance OS (Skills-Based).md  alembic.ini  deep-research-report.md  pyproject.toml
.claude/handoffs/: 2026-02-24-214347-tur-37-merged-prd-linear-next-tur-38.md  2026-02-24-223959-tur-38-merged-review-queue.md  2026-02-26-153904-tur-43-post-merge-main-handoff.md  2026-03-01-095302-tur-45-merged-main-handoff.md  2026-03-05-142016-tur-46-merged-main-handoff.md  2026-03-06-101210-tur-47-merged-main-handoff.md  2026-03-06-162138-tur-48-merged-main-handoff.md  2026-03-06-164532-tur-27-epic-closeout.md  2026-03-06-174235-finance-epics-closeout-sweep.md
.github/workflows/: ci.yml  e2e.yml  lockfile-check.yml
alembic/: env.py
alembic/versions/: 1d4a7b9c2e6f_review_item_active_recurring_missed_unique.py  2f6c8a9d1e4b_reconciliation_checkpoint_details.py  3c9f2e1b7a4d_recurring_active_key_uniqueness.py  4e8b1c7d2a9f_recurrings_active_key_shape_check.py  5b4a6d1e8c2f_metric_observations_for_quality_and_trust.py  6a7b3c1d9e2f_recurring_event_unique_expected_date.py  6f4d9e3b2a10_review_queue_states_and_events.py  7e3b4c2d1f90_flex_budget_bucket_definitions_and_mappings.py  8c1d7bf6e2a4_review_item_active_dedupe_unique_index.py  9d2c4a7f3b11_categories_root_name_unique_index.py  a4c9e2f1b7d8_review_item_source_recurring.py  b9023bb6dd2f_canonical_sqlite_schema_baseline.py  c3a1d7e4b9f0_dedupe_candidate_unique_pair_index.py  d5f0c7a1e9b2_dedupe_candidate_events.py  (+2 more)
tests/: __init__.py  conftest.py  helpers.py
tests/backup/: helpers.py  (+2 more)
(+133 files in other folders)
