[project]
name = "finance-analysis-agent"
version = "0.1.0"
description = "Personal Finance OS schema and migration baseline"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "pypdf>=4.3.1",
    "sqlalchemy>=2.0.47",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
finance-analysis-agent = "finance_analysis_agent.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/finance_analysis_agent"]
